--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -77,6 +77,7 @@
     <ClCompile Include="PipeList.cpp" />
     <ClCompile Include="PipeList.ixx" />
     <ClCompile Include="PosNob.ixx" />
+    <ClCompile Include="ScanDataPoint.ixx" />
     <ClCompile Include="Sensor.cpp" />
     <ClCompile Include="Sensor.ixx" />
     <ClCompile Include="SensorId.ixx" />
