--- a/NNet/NNetScan/NNetScan.vcxproj
+++ b/NNet/NNetScan/NNetScan.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ScanLine.ixx" />
+    <ClCompile Include="ScanMatrix.cpp" />
     <ClCompile Include="ScanPixel.ixx" />
     <ClCompile Include="ScanMatrix.ixx" />
   </ItemGroup>
