--- a/NNet/NNetScan/NNetScan.vcxproj.filters
+++ b/NNet/NNetScan/NNetScan.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="ScanMatrix.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ScanMatrix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
