--- a/Evo/Evolution/Evolution.vcxproj
+++ b/Evo/Evolution/Evolution.vcxproj
@@ -151,6 +151,7 @@
       <StructMemberAlignment>Default</StructMemberAlignment>
       <EnablePREfast>false</EnablePREfast>
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
