--- a/Evo/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj
+++ b/Evo/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj
@@ -155,7 +155,6 @@
     <ClInclude Include="action.h" />
     <ClInclude Include="dump.h" />
     <ClInclude Include="EvolutionCore.h" />
-    <ClInclude Include="EvolutionTypes.h" />
     <ClInclude Include="EvoPixelCoords.h" />
     <ClInclude Include="GeneType.h" />
     <ClInclude Include="gridCoord.h" />
@@ -171,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Config.ixx" />
+    <ClCompile Include="EvolutionTypes.ixx" />
     <ClCompile Include="GridPoint.ixx" />
     <ClCompile Include="GridRect.ixx" />
   </ItemGroup>
