--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -93,5 +93,8 @@
     <ClCompile Include="Random.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SimulationTime.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
