--- a/Toolbox/Commands/Commands.vcxproj.filters
+++ b/Toolbox/Commands/Commands.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClCompile Include="BaseCommand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WrapSimulationTime.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
