ScriptHook moved to Toolbox

--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="D2D_DrawContext.ixx" />
     <ClCompile Include="IncludeCommand.ixx" />
     <ClCompile Include="OnOffPair.ixx" />
+    <ClCompile Include="ScriptHook.ixx" />
     <ClCompile Include="StatusBar.cpp" />
     <ClCompile Include="StatusBar.ixx" />
     <ClCompile Include="ThreadPoolTimer.ixx" />
