--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -213,5 +213,11 @@
     <ClCompile Include="ScriptHook.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="SlowMotionDisplay.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="SlowMotionDisplay.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
