--- a/Evo/History/History.vcxproj
+++ b/Evo/History/History.vcxproj
@@ -171,8 +171,6 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="genCmdList.h" />
-    <ClInclude Include="HistCacheItem.h" />
     <ClInclude Include="HistModelData.h" />
     <ClInclude Include="HistoryCache.h" />
     <ClInclude Include="HistoryIterator.h" />
@@ -182,8 +180,10 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GenCmdList.ixx" />
     <ClCompile Include="GenerationCmd.cpp" />
     <ClCompile Include="GenerationCmd.ixx" />
+    <ClCompile Include="HistCacheItem.ixx" />
     <ClCompile Include="HistGeneration.ixx" />
     <ClCompile Include="HistoryCache.cpp" />
     <ClCompile Include="HistoryGeneration.cpp" />
@@ -194,6 +194,9 @@
     <ClCompile Include="HistSlotNr.ixx" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Toolbox\BasicUtils\BasicUtils.vcxproj">
+      <Project>{62c73be1-212f-4084-80e8-f8d0b79f3498}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\Toolbox\Types\Types.vcxproj">
       <Project>{c1e2d8d5-65ed-4991-a962-45117c2a245e}</Project>
     </ProjectReference>
