--- a/Evo/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj
+++ b/Evo/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj
@@ -157,10 +157,8 @@
     <ClInclude Include="EvolutionCore.h" />
     <ClInclude Include="EvoPixelCoords.h" />
     <ClInclude Include="GeneType.h" />
-    <ClInclude Include="gridCoord.h" />
     <ClInclude Include="GridDimensions.h" />
     <ClInclude Include="gridNeighbor.h" />
-    <ClInclude Include="gridPOI.h" />
     <ClInclude Include="gridPoint24.h" />
     <ClInclude Include="gridSelection.h" />
     <ClInclude Include="EvolutionCoreWrapperHelpers.h" />
@@ -171,6 +169,8 @@
   <ItemGroup>
     <ClCompile Include="Config.ixx" />
     <ClCompile Include="EvolutionTypes.ixx" />
+    <ClCompile Include="GridCoord.ixx" />
+    <ClCompile Include="GridPOI.ixx" />
     <ClCompile Include="GridPoint.ixx" />
     <ClCompile Include="GridRect.ixx" />
   </ItemGroup>
