--- a/Evo/History/History.vcxproj
+++ b/Evo/History/History.vcxproj
@@ -173,10 +173,8 @@
   <ItemGroup>
     <ClInclude Include="HistModelData.h" />
     <ClInclude Include="HistoryCache.h" />
-    <ClInclude Include="HistoryIterator.h" />
     <ClInclude Include="HistorySystemImpl.h" />
     <ClInclude Include="HistSlot.h" />
-    <ClInclude Include="ModelData.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -188,10 +186,12 @@
     <ClCompile Include="HistoryCache.cpp" />
     <ClCompile Include="HistoryGeneration.cpp" />
     <ClCompile Include="HistoryIterator.cpp" />
+    <ClCompile Include="HistoryIterator.ixx" />
     <ClCompile Include="HistorySystem.cpp" />
     <ClCompile Include="HistorySystem.ixx" />
     <ClCompile Include="HistorySystemImpl.cpp" />
     <ClCompile Include="HistSlotNr.ixx" />
+    <ClCompile Include="ModelData.ixx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Toolbox\BasicUtils\BasicUtils.vcxproj">
