--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -111,5 +111,8 @@
     <ClCompile Include="MainScales.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OptimizeScanArea.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
