--- a/Evo/Evolution/Evolution.rc
+++ b/Evo/Evolution/Evolution.rc
@@ -90,7 +90,7 @@ FONT 8, "Ms Shell Dlg"
 	EDITTEXT IDM_CHANGE_GRID_TYPE_WIDTH,  60,  70, 30, 10, ES_NUMBER
 	LTEXT    "height", IDC_STATIC,        38,  90, 20, 10
 	EDITTEXT IDM_CHANGE_GRID_TYPE_HEIGHT, 60,  90, 30, 10, ES_NUMBER
-	LTEXT    "Grid type", IDC_STATIC,     38, 110, 30, 10
+	LTEXT    "GridModel type", IDC_STATIC,     38, 110, 30, 10
 
 	AUTORADIOBUTTON "Rectangular",            IDM_GRID_TYPE_RECT, 38, 130, 120,  8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
 	AUTORADIOBUTTON "Hexagon (experimental)", IDM_GRID_TYPE_HEX,  38, 150, 120,  8,                     0, WS_EX_LEFT
@@ -133,7 +133,7 @@ FONT 8, "Ms Shell Dlg"
     GROUPBOX        "Shape",     IDM_EDIT_SHAPE_BASE, 115, 10, 80, 65, 0, WS_EX_LEFT
     AUTORADIOBUTTON "Circle",    IDM_EDIT_CIRCLE,     130, 28, 50,  8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
     AUTORADIOBUTTON "Rectangle", IDM_EDIT_RECTANGLE,  130, 42, 50,  8, 0, WS_EX_LEFT
-    AUTORADIOBUTTON "All Grid",  IDM_EDIT_GRID_AREA,  130, 58, 50,  8, 0, WS_EX_LEFT
+    AUTORADIOBUTTON "All GridModel",  IDM_EDIT_GRID_AREA,  130, 58, 50,  8, 0, WS_EX_LEFT
 
     GROUPBOX        "Operation", IDM_EDIT_OPERATION_BASE,     115,  78, 80, 90, 0, WS_EX_LEFT
     AUTORADIOBUTTON "Set",       IDM_EDIT_OPERATION_SET,      130,  93, 34,  8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
