--- a/Evo/EvolutionCore/EvolutionCore.vcxproj
+++ b/Evo/EvolutionCore/EvolutionCore.vcxproj
@@ -178,36 +178,62 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ActionOptions.h" />
+    <ClInclude Include="config.h" />
+    <ClInclude Include="EvolutionCore.h" />
     <ClInclude Include="EvolutionCoreImpl.h" />
+    <ClInclude Include="EvolutionCoreWrapperHelpers.h" />
+    <ClInclude Include="EvolutionCoreWrappers.h" />
+    <ClInclude Include="EvoPixelCoords.h" />
+    <ClInclude Include="EvoStatistics.h" />
+    <ClInclude Include="gene.h" />
+    <ClInclude Include="GeneType.h" />
+    <ClInclude Include="geneTypeLimits.h" />
+    <ClInclude Include="genome.h" />
     <ClInclude Include="gpList.h" />
     <ClInclude Include="gplIterator.h" />
     <ClInclude Include="gridBrush.h" />
+    <ClInclude Include="GridDimensions.h" />
     <ClInclude Include="gridField.h" />
-    <ClInclude Include="grid_model.h" />
+    <ClInclude Include="gridNeighbor.h" />
+    <ClInclude Include="gridPoint.h" />
+    <ClInclude Include="gridPoint24.h" />
+    <ClInclude Include="gridRect.h" />
+    <ClInclude Include="gridSelection.h" />
     <ClInclude Include="individual.h" />
     <ClInclude Include="interaction.h" />
     <ClInclude Include="MortalityTable.h" />
+    <ClInclude Include="PixelCore.h" />
+    <ClInclude Include="strategy.h" />
     <ClInclude Include="StrategyData.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="action.cpp" />
+    <ClCompile Include="Action.cpp" />
+    <ClCompile Include="Action.ixx" />
     <ClCompile Include="ActionOptions.cpp" />
     <ClCompile Include="config.cpp" />
+    <ClCompile Include="Config.ixx" />
     <ClCompile Include="dump.cpp" />
+    <ClCompile Include="EvoDump.ixx" />
     <ClCompile Include="EvolutionCore.cpp" />
     <ClCompile Include="EvolutionCoreImpl.cpp" />
     <ClCompile Include="EvolutionTypes.cpp" />
+    <ClCompile Include="EvolutionTypes.ixx" />
     <ClCompile Include="EvoPixelCoords.cpp" />
     <ClCompile Include="EvoStatistics.cpp" />
-    <ClCompile Include="food.cpp" />
+    <ClCompile Include="Food.cpp" />
     <ClCompile Include="Gene.ixx" />
     <ClCompile Include="GeneType.cpp" />
     <ClCompile Include="GeneTypeLimits.ixx" />
     <ClCompile Include="Genome.ixx" />
     <ClCompile Include="gridBrush.cpp" />
+    <ClCompile Include="GridCoord.ixx" />
     <ClCompile Include="GridDimensions.cpp" />
+    <ClCompile Include="GridModel.ixx" />
     <ClCompile Include="GridPOI.cpp" />
+    <ClCompile Include="GridPOI.ixx" />
+    <ClCompile Include="GridPoint.ixx" />
+    <ClCompile Include="GridRect.ixx" />
     <ClCompile Include="gridSelection.cpp" />
     <ClCompile Include="MortalityTable.cpp" />
     <ClCompile Include="Genome.cpp" />
