--- a/Evo/Win32_appFramework/Win32_appFramework.vcxproj
+++ b/Evo/Win32_appFramework/Win32_appFramework.vcxproj
@@ -176,6 +176,7 @@
     <Image Include="small.ico" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="SpeedControl.ixx" />
     <ClCompile Include="win32_baseAppWindow.cpp" />
     <ClCompile Include="win32_messagePump.cpp" />
     <ClCompile Include="win32_status.cpp" />
