--- a/Evo/Win32_appFramework/Win32_appFramework.vcxproj.filters
+++ b/Evo/Win32_appFramework/Win32_appFramework.vcxproj.filters
@@ -67,5 +67,8 @@
     <ClCompile Include="win32_messagePump.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SpeedControl.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
