--- a/Evo/Win32_history/Win32_history.vcxproj.filters
+++ b/Evo/Win32_history/Win32_history.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="GenDisplayWindow.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="HistAllocThread.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
