multiple scans. RC 5.2

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,12 +1,12 @@
-MoveWindow IDM_APPL_WINDOW -1909 1099 1563 1002
-MoveWindow IDM_MAIN_WINDOW -1901 1151 1548 921
-MoveWindow IDM_MINI_WINDOW -362 1091 416 416
-MoveWindow IDM_MONITOR_WINDOW 200 0 251 316
-MoveWindow IDM_CRSR_WINDOW -307 1877 302 227
-MoveWindow IDM_PARAM_WINDOW -287 1458 282 546
+MoveWindow IDM_APPL_WINDOW -2027 1106 1565 995
+MoveWindow IDM_MAIN_WINDOW -2019 1158 1550 914
+MoveWindow IDM_MINI_WINDOW -421 1094 418 418
+MoveWindow IDM_MONITOR_WINDOW -1856 1472 419 397
+MoveWindow IDM_CRSR_WINDOW -330 1890 302 227
+MoveWindow IDM_PARAM_WINDOW -979 1245 282 572
 MoveWindow IDM_PERF_WINDOW -352 1635 302 282
-MoveWindow IDM_DESC_WINDOW -1907 1094 416 416
-MoveWindow IDM_SIG_DESIGNER -799 1449 616 520
+MoveWindow IDM_DESC_WINDOW -1828 1367 418 418
+MoveWindow IDM_SIG_DESIGNER -654 1129 618 726
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
@@ -14,5 +14,5 @@ ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_HIDE
-ShowWindow IDM_DESC_WINDOW SW_HIDE
+ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
